src/components/Filters/Filters.module.css
.filters {
    height: 100%;
    position: fixed;
    top: 0;
    width: 100%;
    background-color: rgb(43, 43, 43);
    text-align: center;
    color: whitesmoke;
}

.filters_close,
.filter_button,
.clear_button,
.apply_button {
    color: whitesmoke;
    border: 1px solid whitesmoke;
    padding: 1rem;
    cursor: pointer;
    border-radius: 5px;
    background: none;
    transition: background-color 200ms, color 200ms, border-color 200ms;
}


.filters_close {
    float: right;
}

.filters_header {
    padding: 0.5rem 20px;
}

.filters_header::after {
    content: "";
    clear: both;
    display: table;
}

.filters_close:hover {
    background-color: whitesmoke;
    color: rgb(43, 43, 43);
}

.filters_buttons {
    max-width: 700px;
    margin: auto;
}

.filters_buttons h2 {
   margin-bottom: 1rem;
}

.filter_button {
    margin: 0.3rem;
}

.filter_button.active {
    background-color: #2a713d;
    border-color: #2a713d;
}



.clear_all {
    margin-top: 2rem;
}

.clear_button {
    background-color: crimson;
    border-color: crimson;
    margin-right: 1rem;
}

.apply_button{
    background-color: #2a713d;
    border-color: #2a713d;
}

